@@ -11,6 +11,7 @@ laserfence-beam=Laser Fence Section
 [entity-description]
 laserfence-post=A Laser Fence generator that can maintain a 'fence' of max length 15 between two emitters. Each emitter needs to fully charge before it will create a fence to aligned emitters and needs a constant 0.5MW of power to maintain the fences. When one fence segment is destroyed the entire fence dissipates and the emitters must recharge for the fence to reform. 
 laserfence-beam=A section of the fence that zaps attackers. When one fence segment is destroyed the entire fence dissipates and the emitters must recharge for the fence to reform. 
+laserfence-obstruction-text=Laser Fence blocked by __1__
 
 [technology-name]
 laserfence=Laser Fence
