@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
+  Features:
+    - Added floating text to notify when something is blocking a fence from connecting
   Bugfixes:
     - Fixed fences occasionally stopping one tile short of connecting to the next emitter
 ---------------------------------------------------------------------------------------------------
